package org.springframeworkdemo.demo2.exception;

public class BeansException extends Exception {
  public BeansException(String msg) {
    super(msg);
  }
}