package org.springframeworkdemo.demo2.resource;

import java.util.Iterator;

public interface Resource extends Iterator<Object> {
}